--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Biografía</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
 
     <header>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Inicio</a>
@@ -58,89 +59,58 @@
                 </div>
             </div>
         </nav>
+
     </header>
 
     <main>
 
         <div class="container">
-
-            <h2 class="col-md-12 text-center margen_subtitulo_index">
-                ¡¡PRIMICIA, DESFASE ESTRENA 3 CANCIONES AL MISMO TIEMPO!!
-            </h2>
-
-        </div>
-
-        <div class="container col-md-2">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/DondeEstoy.png" class="d-block w-100" alt="estreno1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/InToTheClub.png" class="d-block w-100" alt="estreno2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/NoQuieroMas.png" class="d-block w-100" alt="estreno3">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+            <h3 class="col-md-12 text-center margen_biografia">Autobiografía</h3>
+            <p class="border text-center col-md-12 margen_texto">Mi primera canción fue estrenada el 19 de octubre de
+                2018, un tema de amor, escrito y
+                hecho para quien en ese
+                entonces era mi pareja, luego de eso, con el pasar de los meses comencé a escribir cada día más, nuevas
+                ideas, nuevos flows, nuevas
+                canciones, todo mejoraba y mejoraba, realmente comencé a vivir una experiencia que no cambiaría por
+                nada. Mi
+                vida siempre fue buena, debo admitir
+                que aunque no vivimos jamás en lujos, nunca me faltó un plato en la mesa y siempre pude asistir al
+                colegio/liceo, justamente es por esto que hoy
+                puedo hacer canciones con tanta facilidad, el liceo, recuerdo que mis primeros acercamientos al genero
+                urbano fueron en el liceo, justo cuando entré a 8vo básico
+                cambie de escuela, ya que en los años anteriores había sufrido de bullyng por parte de mis
+                ex-compañeros,
+                en esta nueva escuela, este nuevo lugar, sentí que mi vida por fin comenzó, comencé a vivir, a crecer,
+                tanto
+                artísticamente como en la vida en general,
+                conocí el freestyle y ahí comencé a desarrollarme, me costó, realmente me costaba encajar en las
+                instrumentales (este es uno de los motivos del "por qué?" de mi nombre) pero con el tiempo fui
+                desarrollandome hasta alcanzar lo que fui en algún momento,
+                mis inicios, mis primeras canciones, tales como "mutuo", "cinematográfico", "64 formas de decir te amo"
+                este ultimo ya no es <publico class=""></publico>
+            </p>
         </div>
 
         <div class="container">
-
-            <h2 class="col-md-12 text-center margen_subtitulo_index_2">
-                ¡Puedes visitar escuchar estas canciones sin necesidad de moverte de aquí!
-            </h2>
-
-            <div class="estrenos">
-
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/v84_lgWjoNw"
-                    title="YouTube video player" frameborder="0"
+            <h3 class="text-center col-md-12 margen_iframe_biografia">Mi primera canción:</h3>
+            <div class="container content-fluid text-center">
+                <iframe class="margen_iframe img-fluid text-center" width="600" height="auto"
+                    src="https://www.youtube.com/embed/hIJ9c-ZLuGY" title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
             </div>
-
-            <div class="estrenos">
-
-                <iframe class="" width="560" height="315" src="https://www.youtube.com/embed/kJ41drlDM24"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
-            </div>
-
-            <div class="estrenos">
-
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QV1EWRyogLI"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
-            </div>
-
         </div>
-
 
     </main>
 
     <footer class="pie_pagina">
-    
+
         <div class="container">
             <h3 class="text-center">Segunda entrega Proyecto final | 01/03/2022 | Matias Mamani | DESFASE</h3>
         </div>
-    
+
     </footer>
+
 </body>
 
 </html>
